<resources>
    <string name="app_name">User Browser</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Chris Permana</string>
    <string name="nav_header_subtitle">github.com/krysanify</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_query">Query User</string>
    <string name="nav_browse">View Stored User</string>
    <string name="nav_exit">Exit</string>

    <string name="text_seed">User ID / Seed</string>
    <string name="text_gender">Gender</string>
    <string name="text_limit">Multiple User</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="edit_seed">abc123</string>
    <string name="edit_limit">20</string>
    <string name="btn_query">Query</string>
    <string name="text_name">Name</string>
    <string name="text_age">Age</string>
    <string name="text_dob">DoB</string>
    <string name="text_email">Email</string>
    <string name="text_uid">User ID</string>
    <string name="btn_store">Store</string>
    <string name="snack_user_stored">User info stored</string>
    <string name="btn_delete">Delete</string>
    <string name="snack_user_deleted">User deleted</string>
</resources>
