<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QueryFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/third"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".3" />

    <Spinner
        android:id="@+id/pick_gender"
        android:layout_width="@dimen/width_query"
        android:layout_height="wrap_content"
        android:entries="@array/pick_gender"
        app:layout_constraintStart_toEndOf="@id/center"
        app:layout_constraintTop_toBottomOf="@id/third" />

    <EditText
        android:id="@+id/edit_seed"
        android:layout_width="@dimen/width_query"
        android:layout_height="wrap_content"
        android:hint="@string/edit_seed"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@id/pick_gender"
        app:layout_constraintTop_toBottomOf="@id/pick_gender" />

    <EditText
        android:id="@+id/edit_limit"
        android:layout_width="@dimen/width_query"
        android:layout_height="wrap_content"
        android:hint="@string/edit_limit"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@id/edit_seed"
        app:layout_constraintTop_toBottomOf="@id/edit_seed" />

    <TextView
        android:id="@+id/text_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/text_gender"
        app:layout_constraintBottom_toBottomOf="@id/pick_gender"
        app:layout_constraintEnd_toStartOf="@+id/center"
        app:layout_constraintTop_toTopOf="@id/pick_gender" />

    <TextView
        android:id="@+id/text_seed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/text_seed"
        app:layout_constraintBottom_toBottomOf="@+id/edit_seed"
        app:layout_constraintEnd_toEndOf="@+id/text_gender"
        app:layout_constraintTop_toTopOf="@+id/edit_seed" />

    <TextView
        android:id="@+id/text_limit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/text_limit"
        app:layout_constraintBottom_toBottomOf="@+id/edit_limit"
        app:layout_constraintEnd_toEndOf="@+id/text_seed"
        app:layout_constraintTop_toTopOf="@+id/edit_limit" />

    <Button
        android:id="@+id/btn_query"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/btn_query"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>